--- a/mobile.html
+++ b/mobile.html
@@ -102,23 +102,89 @@
 </section>
 
 <section>
-  <h2>Прайс-лист на услуги</h2>
+  <h2>Прайс-лист на услуги шиномонтажных работ</h2>
   <div class="table-wrapper">
     <table>
       <tr>
-        <th rowspan="2">Услуга</th>
-        <th colspan="3">Легковые</th>
-        <th colspan="3">Джип</th>
-      </tr>
-      <tr>
-        <td>R13–R14</td><td>R15–R17</td><td>R18–R20</td>
-        <td>R15–R17</td><td>R18–R19</td><td>R20–R21</td>
-      </tr>
-      <tr>
-        <td>Переобувка (комплект)</td>
-        <td>400₽</td><td>500₽</td><td>600₽</td>
-        <td>500₽</td><td>600₽</td><td>700₽</td>
-      </tr>
+      <td rowspan="3" style="border: 1px solid #ccc; padding: 10px;"><strong>Подкачка, проверка давления в шинах</strong><br>
+1 колесо 50 рублей<br>
+4 колеса 200 рублей
+      </td>
+      <td colspan="3" style="border: 1px solid #ccc; padding: 10px; font-weight: bold;">
+        Легковые авто (седан, минивен кроссовер)
+      </td>
+      <td colspan="3" style="border: 1px solid #ccc; padding: 10px; font-weight: bold;">
+        Джип
+      </td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 10px;">R13–R14</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">R15–R17</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">R18–R20</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">R15–R17</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">R18–R19</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">R20–R21</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 10px;">400руб.</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">500руб.</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">600руб.</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">500руб.</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">600руб.</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">700руб.</td>
+    </tr>
+    <tr>
+	<td colspan="7" style="border: 1px solid #ccc; padding: 10px;"></td>
+    </tr>
+    <tr>
+	<td style="border: 1px solid #ccc; padding: 10px; font-weight: bold;">Услуги</td>
+	<td colspan="3" style="border: 1px solid #ccc; padding: 10px; font-weight: bold;">
+        Легковой / Микроавтобус</td>
+	<td colspan="3" style="border: 1px solid #ccc; padding: 10px; font-weight: bold;">
+        Джип</td>
+    </tr>
+    <tr>
+	<td style="border: 1px solid #ccc; padding: 10px;">Цена собранного комплекта колес х 4шт.</td>
+	<td colspan="3" style="border: 1px solid #ccc; padding: 10px;">
+        1200руб.</td>
+	<td colspan="3" style="border: 1px solid #ccc; padding: 10px;">
+        1600руб.</td>
+    </tr>
+    <tr>
+	<td style="border: 1px solid #ccc; padding: 10px;">Подкачка, проверка давления в шинах</td>
+	<td colspan="6" style="border: 1px solid #ccc; padding: 10px;">
+        200руб. / 4 кол.</td>
+    </tr>
+    <tr>
+	<td style="border: 1px solid #ccc; padding: 10px;">Протяжка гаек колеса</td>
+	<td colspan="6" style="border: 1px solid #ccc; padding: 10px;">
+        200руб. / 4 кол.</td>
+    </tr>
+    <tr>
+	<td style="border: 1px solid #ccc; padding: 10px;">Зачистка посадочных зон диска (обода)</td>
+	<td colspan="6" style="border: 1px solid #ccc; padding: 10px;">
+        150руб. / 1 кол.</td>
+    </tr>
+    <tr>
+	<td style="border: 1px solid #ccc; padding: 10px;">Холодная вулканизация сквозного пореза</td>
+	<td colspan="6" style="border: 1px solid #ccc; padding: 10px;">
+        От 700руб. до 1600руб. (в зависимости от ремонта и используемого расходного материала)</td>
+    </tr>
+    <tr>
+	<td style="border: 1px solid #ccc; padding: 10px;">Горячая вулканизация сквозного пореза</td>
+	<td colspan="6" style="border: 1px solid #ccc; padding: 10px;">
+        От 1500руб. до 3500руб. (в зависимости от ремонта и используемого расходного материала)</td>
+    </tr>
+    <tr>
+	<td style="border: 1px solid #ccc; padding: 10px;">Горячая вулканизация сквозного пореза (без исп. расходных материалов)</td>
+	<td colspan="6" style="border: 1px solid #ccc; padding: 10px;">
+        1000руб.</td>
+    </tr>
+    <tr>
+	<td colspan="7" style="border: 1px solid #ccc; text-align: left; font-size: 12px; padding: 10px;">
+        1. В комплексе с ремонтом либо с переобувкой<br>
+2. Работы с низкопрофильной резиной и грязевой А/Т и М/Т, резиной размером свыше 285/75 - увеличиваются до 50% в зависимости от сложности выполняемой работы.</td>
+    </tr>
     </table>
   </div>
 </section>
