--- a/mobile.html
+++ b/mobile.html
@@ -190,6 +190,101 @@
 </section>
 
 <section>
+  <h2>Прайс-лист цен на расходные материалы шиномонтажных работ</h2>
+  <div class="table-wrapper">
+    <table>
+      <tr>
+      <td style="border: 1px solid #ccc; padding: 10px; font-weight: bold;">Наименование</td>
+      <td style="border: 1px solid #ccc; padding: 10px; font-weight: bold;">
+        Количество
+      </td>
+      <td style="border: 1px solid #ccc; padding: 10px; font-weight: bold;">
+        Стоимость
+      </td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 10px;">Латка универсальная</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">1шт.
+      </td>
+      <td style="border: 1px solid #ccc; padding: 10px;">
+        100руб.
+      </td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 10px;">Пластырь, размер "R-10" - "R-13"</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">1шт.
+      </td>
+      <td style="border: 1px solid #ccc; padding: 10px;">
+        250руб.
+      </td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 10px;">Пластырь, размер "R-14" - "R-18"</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">1шт.
+      </td>
+      <td style="border: 1px solid #ccc; padding: 10px;">
+        350руб.
+      </td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 10px;">Пластырь, размер "D-4"</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">1шт.
+      </td>
+      <td style="border: 1px solid #ccc; padding: 10px;">
+        500руб.
+      </td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 10px;">Вентиль бескамерной шины</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">1шт.
+      </td>
+      <td style="border: 1px solid #ccc; padding: 10px;">
+        100руб.
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="3" style="border: 1px solid #ccc; padding: 10px;">Балансировочные груза (литьё)</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">от 5 до 100гр. / 1 кол.
+      </td>
+      <td style="border: 1px solid #ccc; padding: 10px;">
+        400руб.
+      </td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 10px;">от 100 до 200гр. / 1 кол.
+      </td>
+      <td style="border: 1px solid #ccc; padding: 10px;">
+        500руб.
+      </td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 10px;">от 200 до 300гр. / 1 кол.
+      </td>
+      <td style="border: 1px solid #ccc; padding: 10px;">
+        600руб.
+      </td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 10px;">Пластырь, размер "R-10" - "R-13"</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">1шт.
+      </td>
+      <td style="border: 1px solid #ccc; padding: 10px;">
+        1000руб.
+      </td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 10px;">Пластырь, размер "R-14" - "R-18"</td>
+      <td style="border: 1px solid #ccc; padding: 10px;">1шт.
+      </td>
+      <td style="border: 1px solid #ccc; padding: 10px;">
+        1000руб.
+      </td>
+    </tr>
+    </table>
+  </div>
+</section>
+
+<section>
   <h2>Контакты</h2>
   <p><strong>Адрес:</strong> г. Оха, ул. Блюхера, д. 8/1</p>
   <p><strong>Телефон:</strong> <a href="tel:+79963443630">+7 (996) 344-36-30</a></p>
