--- a/mobile.html
+++ b/mobile.html
@@ -125,7 +125,7 @@
         Легковые авто (седан, минивен кроссовер)
       </td>
       <td colspan="3" style="border: 1px solid #ccc; padding: 10px; font-weight: bold;">
-        Джип
+        внедорожник
       </td>
     </tr>
     <tr>
@@ -152,7 +152,7 @@
 	<td colspan="3" style="border: 1px solid #ccc; padding: 10px; font-weight: bold;">
         Легковой / Микроавтобус</td>
 	<td colspan="3" style="border: 1px solid #ccc; padding: 10px; font-weight: bold;">
-        Джип</td>
+        внедорожник</td>
     </tr>
     <tr>
 	<td style="border: 1px solid #ccc; padding: 10px;">Цена собранного комплекта колес х 4шт.</td>
@@ -193,7 +193,7 @@
     </tr>
     <tr>
 	<td colspan="7" style="border: 1px solid #ccc; text-align: left; font-size: 12px; padding: 10px;">
-        1. В комплексе с ремонтом либо с переобувкой<br>
+        1. В комплексе с ремонтом и с переобувкой<br>
 2. Работы с низкопрофильной резиной и грязевой А/Т и М/Т, резиной размером свыше 285/75 - увеличиваются до 50% в зависимости от сложности выполняемой работы.</td>
     </tr>
     </table>
