--- a/mobile.html
+++ b/mobile.html
@@ -325,5 +325,15 @@
   © 2025 Шиномонтаж EVVA bunker
 </footer>
 
+<!-- Yandex.RTB R-A-16145172-1 -->
+<script>
+window.yaContextCb.push(() => {
+    Ya.Context.AdvManager.render({
+        "blockId": "R-A-16145172-1",
+        "type": "floorAd",
+        "platform": "desktop"
+    })
+})
+</script>
 </body>
 </html>
