--- a/desktop.html
+++ b/desktop.html
@@ -298,5 +298,16 @@
     header.style.backgroundImage = `url('${images[index]}')`;
   }, 3000);
 </script>
+
+<!-- Yandex.RTB R-A-16145172-1 -->
+<script>
+window.yaContextCb.push(() => {
+    Ya.Context.AdvManager.render({
+        "blockId": "R-A-16145172-1",
+        "type": "floorAd",
+        "platform": "desktop"
+    })
+})
+</script>
 </body>
 </html>
