--- a/desktop.html
+++ b/desktop.html
@@ -262,6 +262,11 @@
 </section>
 
 <section>
+  <h2>Реклама</h2>
+  <div id="yandex_rtb_R-A-16145172-1" style="margin: 20px auto; text-align: center;"></div>
+</section>
+
+<section>
   <h2>Контакты</h2>
   <p>г. Оха, ул. Блюхера, д. 8/1 (напротив ДК)</p>
   <p>📞 <a href="tel:+79963443630">+7 (996) 344-36-30</a></p>
