--- a/mobile.html
+++ b/mobile.html
@@ -324,16 +324,13 @@
 <footer>
   © 2025 Шиномонтаж EVVA bunker
 </footer>
-
-<!-- Yandex.RTB R-A-16145172-1 -->
 <script>
-window.yaContextCb.push(() => {
+  window.yaContextCb.push(() => {
     Ya.Context.AdvManager.render({
-        "blockId": "R-A-16145172-1",
-        "type": "floorAd",
-        "platform": "desktop"
-    })
-})
+      renderTo: "yandex_rtb_R-A-16145172-1",
+      blockId: "R-A-16145172-1"
+    });
+  });
 </script>
 </body>
 </html>
