--- a/mobile.html
+++ b/mobile.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+<!-- Yandex.RTB -->
+<script>window.yaContextCb=window.yaContextCb||[]</script>
+<script src="https://yandex.ru/ads/system/context.js" async></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Шиномонтаж EVVA bunker</title>
@@ -321,6 +324,15 @@
 <footer>
   © 2025 Шиномонтаж EVVA bunker
 </footer>
-
+<!-- Yandex.RTB R-A-16145172-2 -->
+<script>
+window.yaContextCb.push(() => {
+    Ya.Context.AdvManager.render({
+        "blockId": "R-A-16145172-2",
+        "type": "floorAd",
+        "platform": "touch"
+    })
+})
+</script>
 </body>
 </html>
